libsdir = $(top_srcdir)/libs
AM_CPPFLAGS = -DPKGLIBDIR='"$(pkglibdir)"' \
              -DPKGDATADIR='"$(pkgdatadir)"' \
              -DLOCALEDIR='"$(localedir)"' \
              -DHTMLDIR='"$(htmldir)"' \
              -I$(top_srcdir)/include \
              -I$(libsdir) \
              $(LIBSIGC_CFLAGS) \
              $(XML_CFLAGS) \
              $(FTGL_CFLAGS)

# Clusters of source files common to executable and tests
VFS_SOURCES = vfs/DeflatedInputStream.cpp \
              vfs/DirectoryArchive.cpp \
              vfs/Doom3FileSystem.cpp \
              vfs/ZipArchive.cpp

# DarkRadiant executable
bin_PROGRAMS = darkradiant
darkradiant_CPPFLAGS = $(AM_CPPFLAGS) 
darkradiant_LDFLAGS = $(XML_LIBS) \
                      $(GLEW_LIBS) \
                      $(GL_LIBS) \
                      $(GLU_LIBS) \
                      $(JPEG_LIBS) \
                      $(PNG_LIBS) \
                      $(FTGL_LIBS) \
                      $(LIBSIGC_LIBS) \
                      $(FILESYSTEM_LIBS) \
                      $(DL_LIBS) \
                      $(INTL_LIBS) \
                      $(WX_LIBS) \
                      $(Z_LIBS)
darkradiant_LDADD = $(top_builddir)/libs/scene/libscenegraph.la \
                    $(top_builddir)/libs/wxutil/libwxutil.la \
                    $(top_builddir)/libs/xmlutil/libxmlutil.la \
                    $(top_builddir)/libs/math/libmath.la
darkradiant_SOURCES = main.cpp \
                      RadiantApp.cpp \
                      RadiantModule.cpp \
                      RadiantThreadManager.cpp \
                      brush/Winding.cpp \
                      brush/export/CollisionModel.cpp \
                      brush/BrushModule.cpp \
                      brush/FixedWinding.cpp \
                      brush/BrushNode.cpp \
                      brush/FaceInstance.cpp \
                      brush/Brush.cpp \
                      brush/TextureProjection.cpp \
                      brush/Face.cpp \
                      brush/TexDef.cpp \
                      brush/TextureMatrix.cpp \
                      brush/csg/BrushByPlaneClipper.cpp \
                      brush/csg/CSG.cpp \
                      brush/FacePlane.cpp \
                      camera/Camera.cpp \
                      camera/GlobalCamera.cpp \
                      camera/CameraSettings.cpp \
                      camera/CamRenderer.cpp \
                      camera/CamWnd.cpp \
                      camera/FloatingCamWnd.cpp \
                      commandsystem/CommandSystem.cpp \
                      eclassmgr/Doom3EntityClass.cpp \
                      eclassmgr/EClassManager.cpp \
                      entity/ShaderParms.cpp \
                      entity/EntitySettings.cpp \
                      entity/KeyValueObserver.cpp \
                      entity/EntityNode.cpp \
                      entity/RotationMatrix.cpp \
                      entity/target/TargetManager.cpp \
                      entity/target/TargetLineNode.cpp \
                      entity/target/TargetKeyCollection.cpp \
                      entity/target/TargetKey.cpp \
                      entity/target/TargetableNode.cpp \
                      entity/light/Renderables.cpp \
                      entity/light/Light.cpp \
                      entity/light/LightNode.cpp \
                      entity/eclassmodel/EclassModelNode.cpp \
                      entity/RotationKey.cpp \
                      entity/NameKeyObserver.cpp \
                      entity/doom3group/Doom3GroupNode.cpp \
                      entity/doom3group/Doom3Group.cpp \
                      entity/NamespaceManager.cpp \
                      entity/precompiled.cpp \
                      entity/generic/GenericEntity.cpp \
                      entity/generic/GenericEntityNode.cpp \
                      entity/speaker/SpeakerNode.cpp \
                      entity/speaker/SpeakerRenderables.cpp \
                      entity/Doom3Entity.cpp \
                      entity/ModelKey.cpp \
                      entity/KeyValue.cpp \
                      entity/curve/CurveCatmullRom.cpp \
                      entity/curve/Curve.cpp \
                      entity/curve/CurveEditInstance.cpp \
                      entity/curve/CurveNURBS.cpp \
                      entity/AngleKey.cpp \
                      entity/EntityCreator.cpp \
                      eventmanager/Accelerator.cpp \
                      eventmanager/EventManager.cpp \
                      eventmanager/GlobalKeyEventFilter.cpp \
                      eventmanager/MouseToolGroup.cpp \
                      eventmanager/MouseToolManager.cpp \
                      eventmanager/Statement.cpp \
                      eventmanager/Toggle.cpp \
                      eventmanager/WidgetToggle.cpp \
                      filetypes/FileTypeRegistry.cpp \
                      filters/BasicFilterSystem.cpp \
                      filters/XMLFilter.cpp \
                      fonts/FontLoader.cpp \
                      fonts/GlyphInfo.cpp \
                      fonts/GlyphSet.cpp \
                      fonts/FontManager.cpp \
                      image/dds.cpp \
                      image/ddslib.cpp \
                      image/DDSImage.cpp \
                      image/Doom3ImageLoader.cpp \
                      image/ImageLoaderWx.cpp \
                      image/TGALoader.cpp \
                      mapdoom3/mapdoom3.cpp \
                      mapdoom3/Quake3MapFormat.cpp \
                      mapdoom3/Doom3MapFormat.cpp \
                      mapdoom3/Doom3MapReader.cpp \
                      mapdoom3/Doom3PrefabFormat.cpp \
                      mapdoom3/Quake3MapReader.cpp \
                      mapdoom3/Doom3MapWriter.cpp \
                      mapdoom3/primitiveparsers/PatchDef2.cpp \
                      mapdoom3/primitiveparsers/Patch.cpp \
                      mapdoom3/primitiveparsers/PatchDef3.cpp \
                      mapdoom3/primitiveparsers/BrushDef3.cpp \
                      mapdoom3/primitiveparsers/BrushDef.cpp \
                      mapdoom3/Quake4MapReader.cpp \
                      mapdoom3/aas/Doom3AasFileLoader.cpp \
                      mapdoom3/aas/Doom3AasFileSettings.cpp \
                      mapdoom3/aas/Doom3AasFile.cpp \
                      mapdoom3/Quake4MapFormat.cpp \
                      md5model/MD5Skeleton.cpp \
                      md5model/plugin.cpp \
                      md5model/MD5Model.cpp \
                      md5model/MD5ModelLoader.cpp \
                      md5model/MD5AnimationCache.cpp \
                      md5model/MD5Surface.cpp \
                      md5model/MD5Anim.cpp \
                      md5model/MD5ModelNode.cpp \
                      modelfile/AseExporter.cpp \
                      modelfile/Lwo2Chunk.cpp \
                      modelfile/Lwo2Exporter.cpp \
                      modelfile/PicoModelLoader.cpp \
                      modelfile/PicoModelModule.cpp \
                      modelfile/PicoModelNode.cpp \
                      modelfile/RenderablePicoModel.cpp \
                      modelfile/RenderablePicoSurface.cpp \
                      modelfile/WavefrontExporter.cpp \
                      modelfile/picomodel/pm_md3.c \
                      modelfile/picomodel/pm_md2.c \
                      modelfile/picomodel/pm_obj.c \
                      modelfile/picomodel/picointernal.c \
                      modelfile/picomodel/picomodules.c \
                      modelfile/picomodel/pm_lwo.c \
                      modelfile/picomodel/pm_mdc.c \
                      modelfile/picomodel/pm_fm.c \
                      modelfile/picomodel/pm_ase.c \
                      modelfile/picomodel/picomodel.c \
                      modelfile/picomodel/lwo/envelope.c \
                      modelfile/picomodel/lwo/surface.c \
                      modelfile/picomodel/lwo/clip.c \
                      modelfile/picomodel/lwo/lwob.c \
                      modelfile/picomodel/lwo/lwio.c \
                      modelfile/picomodel/lwo/lwo2.c \
                      modelfile/picomodel/lwo/list.c \
                      modelfile/picomodel/lwo/pntspols.c \
                      modelfile/picomodel/lwo/vmap.c \
                      modelfile/picomodel/lwo/vecmath.c \
                      modelfile/picomodel/pm_terrain.c \
                      modelfile/picomodel/pm_ms3d.c \
                      modelfile/picomodel/pm_3ds.c \
                      namespace/ComplexName.cpp \
                      namespace/Namespace.cpp \
                      namespace/NamespaceFactory.cpp \
                      particles/ParticleNode.cpp \
                      particles/RenderableParticle.cpp \
                      particles/RenderableParticleBunch.cpp \
                      particles/ParticlesManager.cpp \
                      particles/StageDef.cpp \
                      particles/particles.cpp \
                      particles/ParticleParameter.cpp \
                      particles/editor/ParticleEditor.cpp \
                      particles/RenderableParticleStage.cpp \
                      particles/ParticleDef.cpp \
                      render/backend/glprogram/ARBBumpProgram.cpp \
                      render/backend/glprogram/ARBDepthFillProgram.cpp \
					  render/backend/glprogram/GenericVFPProgram.cpp \
                      render/backend/glprogram/GLSLBumpProgram.cpp \
                      render/backend/glprogram/GLSLDepthFillProgram.cpp \
                      render/backend/OpenGLShader.cpp \
                      render/backend/GLProgramFactory.cpp \
                      render/backend/OpenGLShaderPass.cpp \
                      render/LinearLightList.cpp \
                      render/OpenGLModule.cpp \
                      render/OpenGLRenderSystem.cpp \
					  render/RenderSystemFactory.cpp \
					  render/View.cpp \
                      render/debug/SpacePartitionRenderer.cpp \
                      scenegraph/SceneGraph.cpp \
                      scenegraph/Octree.cpp \
                      scenegraph/SceneGraphFactory.cpp \
                      shaders/CameraCubeMapDecl.cpp \
                      shaders/textures/TextureManipulator.cpp \
                      shaders/textures/GLTextureManager.cpp \
                      shaders/Doom3ShaderLayer.cpp \
                      shaders/TableDefinition.cpp \
                      shaders/ShaderTemplate.cpp \
                      shaders/MapExpression.cpp \
                      shaders/CShader.cpp \
                      shaders/Doom3ShaderSystem.cpp \
                      shaders/ShaderLibrary.cpp \
                      shaders/ShaderExpression.cpp \
                      skins/Doom3SkinCache.cpp \
					  ui/UserInterfaceModule.cpp \
                      ui/Documentation.cpp \
                      ui/entitychooser/EntityClassChooser.cpp \
                      ui/entitychooser/EntityClassTreePopulator.cpp \
                      ui/eclasstree/EClassTree.cpp \
                      ui/eclasstree/EClassTreeBuilder.cpp \
                      ui/entitylist/EntityList.cpp \
                      ui/entitylist/GraphTreeModel.cpp \
                      ui/prefabselector/PrefabPopulator.cpp \
                      ui/prefabselector/PrefabSelector.cpp \
                      ui/texturebrowser/TextureBrowser.cpp \
                      ui/texturebrowser/TextureBrowserManager.cpp \
                      ui/findshader/FindShader.cpp \
                      ui/mapinfo/MapInfoDialog.cpp \
                      ui/mapinfo/EntityInfoTab.cpp \
                      ui/mapinfo/ShaderInfoTab.cpp \
                      ui/mapinfo/ModelInfoTab.cpp \
					  ui/mapinfo/LayerInfoTab.cpp \
                      ui/mediabrowser/MediaBrowser.cpp \
                      ui/particles/ParticlesChooser.cpp \
                      ui/brush/QuerySidesDialog.cpp \
                      ui/overlay/OverlayDialog.cpp \
                      ui/overlay/Overlay.cpp \
                      ui/splash/Splash.cpp \
					  ui/grid/GridManager.cpp \
                      ui/mru/MRUMenuItem.cpp \
                      ui/mru/MRU.cpp \
                      ui/layers/LayerControl.cpp \
                      ui/layers/LayerContextMenu.cpp \
                      ui/layers/LayerControlDialog.cpp \
                      ui/layers/LayerOrthoContextMenuItem.cpp \
                      ui/ortho/OrthoContextMenu.cpp \
                      ui/about/AboutDialog.cpp \
                      ui/einspector/AnglePropertyEditor.cpp \
                      ui/einspector/TexturePropertyEditor.cpp \
                      ui/einspector/EntityInspector.cpp \
                      ui/einspector/SkinChooser.cpp \
                      ui/einspector/ColourPropertyEditor.cpp \
                      ui/einspector/EntityPropertyEditor.cpp \
                      ui/einspector/SkinPropertyEditor.cpp \
                      ui/einspector/Vector3PropertyEditor.cpp \
                      ui/einspector/AddPropertyDialog.cpp \
                      ui/einspector/FloatPropertyEditor.cpp \
                      ui/einspector/BooleanPropertyEditor.cpp \
                      ui/einspector/LightTextureChooser.cpp \
                      ui/einspector/SoundPropertyEditor.cpp \
                      ui/einspector/PropertyEditor.cpp \
                      ui/einspector/PropertyEditorFactory.cpp \
                      ui/einspector/ClassnamePropertyEditor.cpp \
                      ui/einspector/ModelPropertyEditor.cpp \
                      ui/common/TexturePreviewCombo.cpp \
                      ui/common/ShaderSelector.cpp \
                      ui/common/ShaderChooser.cpp \
                      ui/common/ShaderDefinitionView.cpp \
                      ui/common/RenderableAABB.cpp \
                      ui/common/CommandEntry.cpp \
                      ui/common/EntityChooser.cpp \
                      ui/common/MapPreview.cpp \
                      ui/menu/FiltersMenu.cpp \
                      ui/prefdialog/GameSetupDialog.cpp \
					  ui/prefdialog/GameSetupPage.cpp \
                      ui/prefdialog/GameSetupPageIdTech.cpp \
					  ui/prefdialog/GameSetupPageTdm.cpp \
                      ui/prefdialog/PrefPage.cpp \
                      ui/prefdialog/PrefDialog.cpp \
					  ui/prefdialog/PreferenceItem.cpp \
                      ui/transform/TransformDialog.cpp \
                      ui/modelselector/MaterialsList.cpp \
                      ui/modelselector/ModelSelector.cpp \
                      ui/surfaceinspector/SurfaceInspector.cpp \
                      ui/patch/CapDialog.cpp \
                      ui/patch/PatchThickenDialog.cpp \
                      ui/patch/PatchInspector.cpp \
                      ui/patch/PatchCreateDialog.cpp \
                      ui/patch/BulgePatchDialog.cpp \
                      ui/lightinspector/LightInspector.cpp \
                      ui/commandlist/CommandList.cpp \
                      ui/commandlist/ShortcutChooser.cpp \
                      ui/filterdialog/FilterDialog.cpp \
                      ui/filterdialog/FilterEditor.cpp \
                      ui/mainframe/MainFrame.cpp \
                      ui/mainframe/MainFrameLayoutManager.cpp \
                      ui/mainframe/FloatingLayout.cpp \
                      ui/mainframe/EmbeddedLayout.cpp \
                      ui/mainframe/SplitPaneLayout.cpp \
                      ui/mainframe/RegularLayout.cpp \
                      ui/mainframe/ScreenUpdateBlocker.cpp \
                      ui/mainframe/TopLevelFrame.cpp \
                      ui/modelexport/ExportAsModelDialog.cpp \
                      ui/mousetool/BindToolDialog.cpp \
                      ui/mousetool/ToolMappingDialog.cpp \
					  ui/aas/AasControl.cpp \
					  ui/aas/AasControlDialog.cpp \
                      ui/widgets/Splitter.cpp \
                      uimanager/SoundChooser.cpp \
                      uimanager/StatusBarManager.cpp \
                      uimanager/animationpreview/MD5AnimationChooser.cpp \
                      uimanager/animationpreview/AnimationPreview.cpp \
                      uimanager/animationpreview/MD5AnimationViewer.cpp \
                      uimanager/colourscheme/ColourSchemeEditor.cpp \
                      uimanager/colourscheme/ColourSchemeManager.cpp \
                      uimanager/colourscheme/ColourScheme.cpp \
                      uimanager/ToolbarManager.cpp \
                      uimanager/DialogManager.cpp \
                      uimanager/FilterMenu.cpp \
                      uimanager/GroupDialog.cpp \
                      uimanager/menu/MenuManager.cpp \
                      uimanager/menu/MenuFolder.cpp \
                      uimanager/menu/MenuSeparator.cpp \
                      uimanager/menu/MenuItem.cpp \
                      uimanager/menu/MenuBar.cpp \
                      uimanager/menu/MenuElement.cpp \
                      uimanager/UIManager.cpp \
                      uimanager/SoundShaderPreview.cpp \
                      $(VFS_SOURCES) \
                      vfs/Doom3FileSystemModule.cpp \
                      xmlregistry/RegistryTree.cpp \
                      xmlregistry/XMLRegistry.cpp \
                      xyview/tools/BrushCreatorTool.cpp \
                      xyview/tools/ClipperTool.cpp \
					  xyview/tools/MeasurementTool.cpp \
                      xyview/XYWnd.cpp \
					  xyview/FloatingOrthoView.cpp \
                      xyview/GlobalXYWnd.cpp \
                      textool/TexToolItem.cpp \
                      textool/item/BrushItem.cpp \
                      textool/item/FaceItem.cpp \
                      textool/item/FaceVertexItem.cpp \
                      textool/item/PatchItem.cpp \
                      textool/item/PatchVertexItem.cpp \
                      textool/TexTool.cpp \
					  layers/LayerInfoFileModule.cpp \
                      layers/LayerCommandTarget.cpp \
                      layers/LayerSystem.cpp \
					  layers/LayerUsageBreakdown.cpp \
                      modulesystem/DynamicLibrary.cpp \
                      modulesystem/ApplicationContextImpl.cpp \
                      modulesystem/ModuleLoader.cpp \
                      modulesystem/ModuleRegistry.cpp \
                      selection/SelectedNodeList.cpp \
					  selection/clipboard/Clipboard.cpp \
                      selection/shaderclipboard/ShaderClipboard.cpp \
                      selection/shaderclipboard/Texturable.cpp \
					  selection/shaderclipboard/ClosestTexturableFinder.cpp \
                      selection/selectionset/SelectionSetManager.cpp \
                      selection/selectionset/SelectionSetToolmenu.cpp \
					  selection/selectionset/SelectionSetInfoFileModule.cpp \
                      selection/selectionset/SelectionSet.cpp \
                      selection/ManipulateMouseTool.cpp \
                      selection/SelectionMouseTools.cpp \
                      selection/SelectionTest.cpp \
                      selection/manipulators/ManipulatorBase.cpp \
                      selection/TransformationVisitors.cpp \
                      selection/algorithm/Transformation.cpp \
                      selection/algorithm/GroupCycle.cpp \
                      selection/algorithm/Curves.cpp \
                      selection/algorithm/Entity.cpp \
                      selection/algorithm/Shader.cpp \
					  selection/algorithm/Patch.cpp \
                      selection/algorithm/Primitives.cpp \
                      selection/algorithm/Group.cpp \
                      selection/algorithm/ModelFinder.cpp \
                      selection/algorithm/General.cpp \
					  selection/algorithm/Planes.cpp \
                      selection/BestPoint.cpp \
					  selection/ManipulationPivot.cpp \
                      selection/manipulators/DragManipulator.cpp \
                      selection/RadiantSelectionSystem.cpp \
                      selection/manipulators/RotateManipulator.cpp \
                      selection/manipulators/ManipulatorComponents.cpp \
                      selection/manipulators/ScaleManipulator.cpp \
					  selection/group/SelectionGroupManager.cpp \
					  selection/group/SelectionGroupInfoFileModule.cpp \
                      selection/manipulators/TranslateManipulator.cpp \
                      selection/manipulators/ModelScaleManipulator.cpp \
                      settings/Game.cpp \
                      settings/GameManager.cpp \
                      settings/PreferenceSystem.cpp \
					  settings/PreferencePage.cpp \
                      settings/Win32Registry.cpp \
					  patch/algorithm/General.cpp \
					  patch/algorithm/Prefab.cpp \
                      patch/Patch.cpp \
					  patch/PatchCreators.cpp \
                      patch/PatchNode.cpp \
                      patch/PatchModule.cpp \
                      patch/PatchRenderables.cpp \
                      patch/PatchTesselation.cpp \
                      map/RootNode.cpp \
                      map/MapPosition.cpp \
                      map/EditingStopwatch.cpp \
                      map/EditingStopwatchInfoFileModule.cpp \
                      map/FindMapElements.cpp \
					  map/infofile/InfoFileManager.cpp \
					  map/infofile/InfoFile.cpp \
					  map/infofile/InfoFileExporter.cpp \
                      map/MapFileManager.cpp \
					  map/algorithm/ChildPrimitives.cpp \
                      map/algorithm/Skins.cpp \
                      map/algorithm/Traverse.cpp \
					  map/algorithm/MapExporter.cpp \
                      map/algorithm/MapImporter.cpp \
                      map/algorithm/Export.cpp \
                      map/algorithm/Models.cpp \
                      map/CounterManager.cpp \
                      map/RegionManager.cpp \
                      map/PointFile.cpp \
                      map/MapPositionManager.cpp \
                      map/MapResource.cpp \
                      map/Map.cpp \
                      map/AutoSaver.cpp \
                      map/StartupMapLoader.cpp \
                      map/MapResourceManager.cpp \
                      map/MapFormatManager.cpp \
					  map/AasFileManager.cpp \
					  map/RenderableAasFile.cpp \
                      clipper/ClipPoint.cpp \
                      clipper/Clipper.cpp \
                      log/Console.cpp \
                      log/LogStream.cpp \
                      log/LogWriter.cpp \
                      log/COutRedirector.cpp \
                      log/StringLogDevice.cpp \
                      log/LogStreamBuf.cpp \
                      log/LogFile.cpp \
                      undo/UndoSystem.cpp \
                      model/ModelCache.cpp \
                      model/ModelExporter.cpp \
					  model/ModelFormatManager.cpp \
                      model/NullModel.cpp \
					  model/ScaledModelExporter.cpp \
                      model/NullModelNode.cpp 

check_PROGRAMS = facePlaneTest vfsTest
TESTS = $(check_PROGRAMS)

facePlaneTest_SOURCES = test/facePlaneTest.cpp \
                        brush/FacePlane.cpp
facePlaneTest_LDADD = $(top_builddir)/libs/math/libmath.la

vfsTest_SOURCES = test/vfsTest.cpp $(VFS_SOURCES) \
                  shaders/Doom3ShaderLayer.cpp \
                  shaders/TableDefinition.cpp \
                  shaders/textures/GLTextureManager.cpp
vfsTest_LDFLAGS = $(FILESYSTEM_LIBS) $(Z_LIBS)
